css/body.css
html {
  overflow: hidden;
  position: relative;
}

body {
	overflow: hidden;
	position: relative;
	/*font-family: Monospace;*/
	font-family: Helvetica, sans-serif;
	margin: 0;
	background-color: #000;
	color: #fff;
	font-size: 13px;
	line-height: 24px;
	overscroll-behavior: none;
	-webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

.no_overflow {
	overflow: hidden;
}

